@@ -9,6 +9,7 @@ phpMyAdmin - ChangeLog
 - bug #3353649 [interface] "Create an index on X columns" form not validated
 - bug #3350790 [interface] JS error in Table->Structure->Index->Edit
 - bug #3353811 [interface] Info message has "error" class
+- bug #3357837 [interface] TABbing through a NULL field in the inline mode resets NULL
 
 3.4.3.1 (2011-07-02)
 - [security] Fixed possible session manipulation in swekey authentication, see PMASA-2011-5
